# tkeden

./: .travis.yml  EDENicon.psd  Makefile.in  configure  configure.in  cscope  cygwin.configure  darwin.configure  dcs-linux-i686.configure  dcs-solaris-i386.configure  dcs-solaris-sparc.configure  debian.configure  eden-res.rc  generic-linux.configure  generic.mk.in  mac10.6.configure  mac10.6.link.tkeden  mac10.6.link.ttyeden  macosx.leopard.configure  mkdosteeden  nothing.c  ubuntu-12.04.configure  version.h  warwickthinclient-cygwin.configure  win.configure
DOSTE/: Makefile.in  doste.aop  doste.cpp  mkdoste
Docs/: COPYING.TXT  INSTALL.TXT  LICENSE_GLPNG.TXT  README.TXT  TODO
Donald/: check.c  parser.y  symbol.c  tree.c  utility.c
EX/: ex.c  parser.c  script.c
Eden/: Makefile.in  agency.q.c  builtin.c  code.c  emalloc.h  entry.q.c  eval.c  global.q.c  heap.c  lex.c  lib.c  machine.c  macosxlibloc.c  main.c  refer.c  runset.c  strncatFIX.c  strncatFIX.h  symbol.c  symptr.q.c  type.c  yacc.y
MacOSX/: link  tkeden.icns
MacOSX/tkeden.app/Contents/: Info.plist  PkgInfo
Misc/: curses.c  custom.c  customlib.h
Sasami/: functions.c  glpng.c  parser.c  render.c  structures.c  togl.h  utils.c
Scout/: lex.c  parser.y  print.c  store.c  symbol.c  tree.c
Tests/: benchmark.eden  html.gel  listtest.eden  stringtest.eden
Windows/: Notes.txt  run.bat  tkPlatDecls.h  unix2dos.sh
bison/: bison.simple  custom_yacc.c
htmlwidget/: configure  makemake.tcl.in
htmlwidget-bld/: mac10.6.configure  mac10.6.link
lib-tkeden/: doste.e  eden.eden  eden.txt  edenio.tcl  scout.txt
lib-tkeden/gel/: htmlextensions.e
pcre-3.9/: mac10.6.configure
